--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       </select>
     </section>
 
-    <!-- Step2 予定の種類と補足情報（記号設定） -->
+    <!-- Step2 予定の種類（記号設定） -->
     <section class="card">
-      <h2>Step2. 予定の種類と補足情報</h2>
+      <h2>Step2. 予定の種類</h2>
       <p class="hint">
         使いたい記号と意味を設定します（例：● 通常練習 / ▲ 17時開始 / ✕ お休み / ★ 試合）。
       </p>
@@ -100,8 +100,11 @@
 
         <div class="memo-block">
           <div class="memo-title">メモ</div>
-          <textarea id="memoText" class="memo-textarea"
-            placeholder="例）12/28〜1/5は体育館が使えないためお休みです。&#10;例）★の試合の申込は1/10までにお願いします。"></textarea>
+          <textarea
+            id="memoText"
+            class="memo-textarea"
+            placeholder="例）12/28〜1/5は体育館が使えないためお休みです。&#10;例）★の試合の申込は1/10までにお願いします。"
+          ></textarea>
         </div>
       </div>
     </section>
