--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="card">
       <h2>Step2. 予定の種類</h2>
       <p class="hint">
-        使いたい記号と意味を設定します（例：● 通常営業 / ▲ イベント / ✕ 定休日 / ★ 特別営業）。
+        使いたい記号と意味を設定します。
       </p>
 
       <div class="symbol-row">
@@ -93,8 +93,7 @@
       <h3 class="subheading">記号を選ぶ</h3>
       <div id="symbolButtons"></div>
       <p class="hint">
-        上の記号から使いたいものを選んで、下のカレンダーの日付をタップすると予定を入れられます。<br>
-        1日に最大4つまで記号を入れられます（同じ記号はタップでON/OFF）。
+        上の記号から使いたいものを選んで、下のカレンダーの日付をタップすると予定を入れられます。
       </p>
 
       <div id="calendarImageArea">
@@ -105,7 +104,6 @@
         <div id="legendArea"></div>
 
         <div class="memo-block">
-          <div class="memo-title">メモ</div>
           <textarea
             id="memoText"
             class="memo-textarea"
@@ -121,7 +119,7 @@
       <button id="makeImgBtn" style="display:none;">画像をつくる</button>
       <div id="resultArea"></div>
       <button id="shareBtn" style="display:none;">共有する</button>
-      <p class="hint small">画像を長押しで保存 → LINEやSNSに貼り付けて使えます。</p>
+      <p class="hint small">画像を長押しで保存もできます。</p>
     </section>
 
   </div>
