--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
     <!-- Step1 基本設定 -->
     <section class="card">
-      <h2>Step1. 基本設定</h2>
+      <div class="card-header">
+        <h2>Step1. 基本設定</h2>
+        <button id="restoreBtn" class="restore-btn" type="button">復元</button>
+      </div>
 
       <label>タイトル（任意）</label>
       <input id="calendarTitle" type="text" placeholder="例：3月の営業カレンダー" />
