--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>カレンダー ジェネレーター</title>
+  <meta name="description" content="営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="カレンダージェネレーター｜営業日・予定カレンダーをかんたん作成＆SNSシェア">
+  <meta property="og:description" content="営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
+  <meta property="og:url" content="https://cleverkitjp.github.io/calendar-generator/">
+  <meta property="og:image" content="https://cleverkitjp.github.io/calendar-generator/ogp.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <title>カレンダージェネレーター｜営業日・予定カレンダーをかんたん作成＆SNSシェア</title>
 
   <link rel="stylesheet" href="style.css" />
 
   <!-- html2canvas -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "カレンダージェネレーター",
+  "url": "https://cleverkitjp.github.io/calendar-generator/",
+  "applicationCategory": "Utility",
+  "operatingSystem": "All"
+}
+</script>
+
 </head>
 
 <body class="theme-cool">
@@ -126,7 +145,12 @@
     </section>
 
   </div>
+<footer>
+  <p class="back-to-top">
+  <a href="https://cleverkitjp.github.io/">cleverkitjp トップページへ戻る</a>
+</p>
 
+</footer>
   <script src="script.js"></script>
 </body>
 </html>
