--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://cleverkitjp.github.io/calendar-generator/">
   <meta property="og:image" content="https://cleverkitjp.github.io/calendar-generator/ogp.png">
   <meta name="twitter:card" content="summary_large_image">
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <title>カレンダージェネレーター｜営業日・予定カレンダーをかんたん作成＆SNSシェア</title>
 
   <link rel="stylesheet" href="style.css" />
