Integrate Google Tag Manager and Analytics
Added Google Tag Manager and Google Analytics scripts.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
   <meta name="twitter:card" content="summary_large_image">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <title>カレンダージェネレーター｜営業日・予定カレンダーをかんたん作成＆SNSシェア</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-F6517NYNFF');
+</script>
   <link rel="stylesheet" href="style.css" />
 
   <!-- html2canvas -->
