--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
 
   gtag('config', 'G-F6517NYNFF');
 </script>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 
   <!-- html2canvas -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
@@ -164,6 +164,6 @@
 
 </div>
 <div class="shared-footer" id="sharedFooter" aria-live="polite"></div>
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
