--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
   <meta property="og:type" content="website">
   <meta property="og:title" content="カレンダージェネレーター｜営業日・予定カレンダーをかんたん作成＆SNSシェア">
-  <meta property="og:description" content="営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
+  <meta property="og:description" content="インスタやSNSでの告知、LINEでのシェアに最適！営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
   <meta property="og:url" content="https://cleverkitjp.github.io/calendar-generator/">
   <meta property="og:image" content="https://cleverkitjp.github.io/calendar-generator/ogp.png">
   <meta name="twitter:card" content="summary_large_image">
