--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
   "operatingSystem": "All"
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "カレンダージェネレーター",
+  "operatingSystem": "WEB",
+  "applicationCategory": "UtilitiesApplication",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "JPY"
+  },
+  "description": "営業日やイベント予定を記号で作成できる無料のカレンダー画像生成ツール。"
+}
+</script>
 
 </head>
 
