--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <h1>カレンダー ジェネレーター</h1>
     <p class="lead">
-      営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。
+      このカレンダージェネレーターは、営業日・定休日・イベント日・習い事や部活・チームの予定を○・△・★などのマークを使って分かりやすく表現できる無料のカレンダー画像生成ツールです。スマホ対応・登録不要で、作成した画像はLINEやSNSにそのままシェアできます。
     </p>
 
     <!-- Step1 基本設定 -->
