--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image" content="https://cleverkitjp.github.io/calendar-generator/ogp.png">
   <meta name="twitter:card" content="summary_large_image">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
-  <title>カレンダー生成｜営業日・予定カレンダーをかんたん作成＆SNSシェア</title>
+  <title>カレンダージェネレーター｜営業日・予定がひと目で分かるのカレンダー画像をかんたん作成＆SNSシェア</title>
   <link rel="stylesheet" href="https://cleverkitjp.github.io/common.css">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
