--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
+  <meta name="description" content="このカレンダージェネレーターは、営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツールです。スマホ対応・登録不要でそのままシェアできます。">
   <meta property="og:type" content="website">
   <meta property="og:title" content="カレンダージェネレーター｜営業日・予定カレンダーをかんたん作成＆SNSシェア">
   <meta property="og:description" content="インスタやSNSでの告知、LINEでのシェアに最適！営業日、定休日、イベント日、習い事や部活のスケジュールなどを自由に記号入りで作れる無料のカレンダー画像生成ツール。スマホ対応・登録不要でそのままシェアできます。">
@@ -11,7 +11,7 @@
   <meta property="og:image" content="https://cleverkitjp.github.io/calendar-generator/ogp.png">
   <meta name="twitter:card" content="summary_large_image">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
-  <title>カレンダージェネレーター｜営業日・予定がひと目で分かるのカレンダー画像をかんたん作成＆SNSシェア</title>
+  <title>カレンダージェネレーター｜営業日・予定がひと目で分かるカレンダー画像をかんたん作成＆SNSシェア</title>
   <link rel="stylesheet" href="https://cleverkitjp.github.io/common.css">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
